Finally a modal for the project. Wrapping react bootstrap modal. Plus small fixes.

--- a/app/components/AdminHome/AdminHome.scss
+++ b/app/components/AdminHome/AdminHome.scss
@@ -3,9 +3,12 @@
   label {
     margin: 0;
   }
-  .partners-container {
-    margin-top: 15px;
+
+  .insert-container {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
+
   .partner-item {
     height: 57px;
 
